completed all the Register objects in the Template

--- a/Assignments/Assignment_Forms/T-83/T83_spaceX_User_details.html
+++ b/Assignments/Assignment_Forms/T-83/T83_spaceX_User_details.html
@@ -12,7 +12,7 @@
         <header id="header" class="clear">
             <div id="hgroup">
                 <h1><a href="#">SpaceX</a></h1>
-                <h2>AeroSpace Company</h2>
+                <h2>AeroSpace Company</h2> 
             </div>
             <form action="#" method="post">
                 <fieldset>
@@ -24,11 +24,17 @@
             </form>
             <nav>
                 <ul id="demo">
-                     <li><a href="./index.html">Home</a></li>
-                    <li><a href="#">Dragon</a></li>
+                     <!-- <li><a href="#">Falcon</a></li>
+                    <li><a href="#">Dragon</a></li>    
                     <li><a href="#">Starship</a></li>
                     <li><a href="#">Rideshare</a></li>
-                    <li class="last"><a href="#">Users Details</a></li> 
+                    <li class="last"><a href="#">Human Spacelight</a></li> -->
+
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Dragon</a></li>
+                    <li><a href="#">Starship</a></li>
+                    <li><a href="./registers.html">Registers</a></li>
+                    <li class="last"><a href="./index.html">Users Details</a></li> 
                    
                 </ul>
             </nav>
@@ -36,7 +42,7 @@
     </div>
     <div class="wrapper row2">
         <div id="container" class="clear">
-            <!-- <section id="slider"><a href="#">
+            <section id="slider"><a href="#">
                 <img src="./images/spaceX.jpg" alt="" id="myBanner"></a></section>
             <div id="homepage">
                 <section id="services" class="clear">
@@ -81,24 +87,7 @@
                         <footer class="more"><a href="#">Read More &raquo;</a></footer>
                     </article>
                 </section>
-            </div> -->
-            <table border="1" style="width:100%">
-                <thead>
-                    <tr>
-                        <th>fname</th>
-                        <th>lname</th>
-                        <th>tel</th>
-                        <th>Address</th>
-                        <th>City</th>
-                        <th>State</th>
-                        <th>zip</th>
-
-                    </tr>
-                </thead>
-                <tbody>
-
-                </tbody>
-            </table>
+            </div>
         </div>
     </div>
     <div class="wrapper row3">
@@ -108,19 +97,7 @@
                     title="Free Website Templates">OS Templates</a></p>
         </footer>
     </div>
-    <script src="./users.js"></script>
-    <script>
-        users.forEach((user) => {
-            var myTr = document.createElement("tr");
-            for (a in user) {
-                var myTd = document.createElement("td")
-                myTd.innerHTML = user[a]
-                myTr.appendChild(myTd)
-            }
-            document.querySelector("tbody").appendChild(myTr);
-
-        })
-    </script>
+    <script src="./spaceX_style."></script>
 </body>
 
 </html>
