--- a/Assignments/Assignment_Forms/T-84/T84_movie_poster.html
+++ b/Assignments/Assignment_Forms/T-84/T84_movie_poster.html
@@ -27,7 +27,7 @@
         <li><a href="#">Home</a></li>
         <li><a href="#">Tollywood</a></li>
         <li><a href="#">Bollywood</a></li>
-        <li><a href="#">Hollywood</a></li>
+        <li><a href="./registers.html">Registers</a></li>
         <li class="last"><a href="./users_details.html">User Details</a></li> 
       </ul>
     </nav>
