--- a/Assignments/Assignment_Forms/T-85/user_details.html
+++ b/Assignments/Assignment_Forms/T-85/user_details.html
@@ -17,7 +17,7 @@
         <li><a href="./T85_tour_template.html">Home</a></li>
         <li><a href="#">Package</a></li>
         <li><a href="#">Adventure</a></li>
-        <li><a href="#">Trekking</a></li>
+        <li><a href="./registers.html">Register</a></li>
         <li class="last"><a href="./user_details.html">User Details</a></li> 
       </ul>
     </nav>
