--- a/Assignments/Assignment_Forms/T-87/T87-flipcart.html
+++ b/Assignments/Assignment_Forms/T-87/T87-flipcart.html
@@ -17,7 +17,7 @@
         <li><a href="#">Home</a></li>
         <li><a href="#">Cart</a></li>
         <li><a href="#">WishList</a></li>
-        <li><a href="#">Favorites</a></li>
+        <li><a href="./register.html">Register</a></li>
         <li class="last"><a href="./users_details.html">User Details</a></li> 
       </ul>
     </nav>
