--- a/Assignments/Assignment_Forms/T-88/T88_developer.html
+++ b/Assignments/Assignment_Forms/T-88/T88_developer.html
@@ -17,7 +17,7 @@
         <li><a href="#">Home</a></li>
         <li><a href="#">Courses</a></li>
         <li><a href="#">Placements</a></li>
-        <li><a href="#">Team</a></li>
+        <li><a href="./register.html">Register</a></li>
         <li class="last"><a href="./user details.html">User Details</a></li> 
       </ul>
     </nav>
