--- a/Assignments/Assignment_Forms/T-86/register.html
+++ b/Assignments/Assignment_Forms/T-86/register.html
@@ -9,15 +9,15 @@
 <div class="wrapper row1">
   <header id="header" class="clear">
     <div id="hgroup">
-      <!-- <h1><a href="#">10000 Coders</a></h1>
-      <h2>Be Free to Learn</h2> -->
+      <h1><a href="#">10000 Coders</a></h1>
+      <h2>Be Free to Learn</h2> 
     </div>
     <nav>
       <ul id="demo">
-        <li><a href="#">Home</a></li>
+        <li><a href="./T86_10000coders.html">Home</a></li>
         <li><a href="#">Curriculum</a></li>
         <li><a href="#">Team</a></li>
-        <li><a href="./register.html">Register</a></li>
+        <li><a href="#">Admission</a></li>
         <li class="last"><a href="./user_details.html">User Details</a></li> 
       </ul>
     </nav>
@@ -25,7 +25,8 @@
 </div>
 <div class="wrapper row2">
   <div id="container" class="clear">
-    <section id="slider" class="clear">
+  <section id="slider" class="clear">
+
       <figure ><img src="./images/murali sir.jpg" alt="" id="myBanner">
         <figcaption>
           <h2>Murali Sir mentor</h2>
@@ -34,7 +35,7 @@
         </figcaption>
       </figure>
     </section>
-    <div id="homepage">
+      <!-- <div id="homepage">
       <section id="services" class="clear">
         <article class="one_third">
           <h2>HTML</h2>
@@ -58,7 +59,7 @@
       <section id="latest" class="last clear">
         <article class="one_quarter">
           <figure class="myImage">
-            <!-- <img src="./images/react.png" width="215" height="100" alt=""> -->
+            <img src="./images/react.png" width="215" height="100" alt=""> 
             <figcaption>
               <h2>React JS</h2>
               <p>React (also known as React.js or ReactJS) is a free and open-source front-end JavaScript library for building user interfaces or UI components.</p>
@@ -68,7 +69,7 @@
         </article>
         <article class="one_quarter">
           <figure class="myImage">
-            <!-- <img src="./images/mongo.png" width="215" height="100" alt=""> -->
+            <img src="./images/mongo.png" width="215" height="100" alt=""> 
             <figcaption>
               <h2>Mongo DB</h2>
               <p>MongoDB is a source-available cross-platform document-oriented database program. Classified as a NoSQL database program, MongoDB uses JSON-like documents with optional schemas. </p>
@@ -78,7 +79,7 @@
         </article>
         <article class="one_quarter">
           <figure class="myImage">
-            <!-- <img src="./images/node.png" width="215" height="100" alt=""> -->
+            <img src="./images/node.png" width="215" height="100" alt=""> 
             <figcaption>
               <h2>Node js</h2>
               <p>Node.js is an open-source, cross-platform, back-end JavaScript runtime environment that runs on the V8 engine and executes JavaScript code outside a web browser. </p>
@@ -88,7 +89,7 @@
         </article>
         <article class="one_quarter lastbox">
           <figure class="myImage">
-            <!-- <img src="./images/bootstrap.jpg" width="215" height="100" alt=""> -->
+            <img src="./images/bootstrap.jpg" width="215" height="100" alt=""> 
             <figcaption>
               <h2>Bootstrap</h2>
               <p>Bootstrap is a free and open-source CSS framework directed at responsive, mobile-first front-end web development.</p>
@@ -97,6 +98,62 @@
           </figure>
         </article>
       </section>
+    </div> -->
+
+    <!-- <table border="1" style="width:100%">
+        <thead>
+            <tr>
+                <th>fname</th>
+                <th>lname</th>
+                <th>tel</th>
+                <th>Address</th>
+                <th>City</th>
+                <th>State</th>
+                <th>zip</th>
+
+            </tr>
+        </thead>
+        <tbody>
+
+
+        </tbody>
+    </table> -->
+
+    <div class="row">
+        <div class="column">
+
+        </div>
+        <div class="column">
+            <form onsubmit="getUserData(event)">
+                <div class="register">
+                    <label for="fullName" class="form-label">Full Name</label>
+                    <input type="text" class="form-control" id="fullName"><br><br>
+                </div>
+                <div class="register">
+                    <label for="email" class="form-label">Email Adress</label>
+                    <input type="email" class="form-control" id="email"><br><br>
+                </div>
+                <div class="register">
+                    <label for="userName" class="form-label">User Name</label>
+                    <input type="text" class="form-control" id="userName"><br><br>
+                </div>
+                <div class="register">
+                <label for="number">Number</label>
+                <input type="number" id="number"> <br><br>
+                </div>
+                <div class="register">
+                    <label for="password" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="password"><br><br>
+                </div><br>
+
+                <!-- <div class="register">
+                    <label for="email" class="form-label">Email Adress</label>
+                    <input type="email" class="form-control" id="email">
+                </div>  -->
+                <button class="btn btn-primary">Submit</button>
+            </form>
+
+        </div>
     </div>
   </div>
 </div>
@@ -106,6 +163,21 @@
     <p class="fl_right">Website by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">Hari Vardhan</a></p>
   </footer>
 </div>
-<script src="./T_86_style.js"></script>
+<script src="./users.js"></script>
+<script>
+    function getUserData(event) {
+            event.preventDefault()
+            var person = {
+                fullName: "",
+                userName: "",
+                email: ""
+            }
+            for (a in person) {
+                person[a] = document.getElementById(a).value
+            }
+            console.log(person)
+        }
+        document.querySelector("button").onclick = getUserData
+</script>
 </body>
 </html>
