--- a/Assignments/Assignment Dynamic Templates/Dynamic Basic 83/user_details.html
+++ b/Assignments/Assignment Dynamic Templates/Dynamic Basic 83/user_details.html
@@ -17,12 +17,20 @@
     </div>   
     <div class="wrapper row2">
         <div class="container">
-            <section class="section1"></section>
-            <div class="homepage">
-                <section class="section2" id="cast"></section>
-                <section class="section3"></section>
-            </div>
-        </div>
+            <table>
+                <thead>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                </thead>
+                <tbody>
+                    
+                </tbody>
+            </table>
     </div>
     <div class="wrapper row3">
         <footer id="footer" ></footer>
