--- a/Javascript/Templates_Dynamic/basic-83/index.html
+++ b/Javascript/Templates_Dynamic/basic-83/index.html
@@ -24,8 +24,9 @@
       <ul>
         <li><a href="./index.html">Home</a></li>
         <li><a href="#">Text Link</a></li>
-        <li><a href="#">Text Link</a></li>
+        <li><a href="./Register.html">Register</a></li>
         <li><a href="usersDetails.html">Users Details</a></li>
+
         <li class="last"><a href="#">Text Link</a></li>
       </ul>
     </nav>
