created display form

--- a/Assignments/Assignment_Forms/T-86/register.html
+++ b/Assignments/Assignment_Forms/T-86/register.html
@@ -1,40 +1,43 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<head>
-<title>10000 coders</title>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="10000coders_style.css" type="text/css">
-</head>
-<body>
-<div class="wrapper row1">
-  <header id="header" class="clear">
-    <div id="hgroup">
-      <h1><a href="#">10000 Coders</a></h1>
-      <h2>Be Free to Learn</h2> 
-    </div>
-    <nav>
-      <ul id="demo">
-        <li><a href="./T86_10000coders.html">Home</a></li>
-        <li><a href="#">Curriculum</a></li>
-        <li><a href="#">Team</a></li>
-        <li><a href="#">Admission</a></li>
-        <li class="last"><a href="./user_details.html">User Details</a></li> 
-      </ul>
-    </nav>
-  </header>
-</div>
-<div class="wrapper row2">
-  <div id="container" class="clear">
-  <section id="slider" class="clear">
 
-      <figure ><img src="./images/murali sir.jpg" alt="" id="myBanner">
-        <figcaption>
-          <h2>Murali Sir mentor</h2>
-          <p>Murali Sir has 11 years experience on webdevelopment and 6 years experience on mentor. Murali sir is also a Manager in Product Based Company. </p>
-          <footer class="more"><a href="#">Read More &raquo;</a></footer>
-        </figcaption>
-      </figure>
-    </section>
+<head>
+  <title>10000 coders</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="10000coders_style.css" type="text/css">
+</head>
+
+<body>
+  <div class="wrapper row1">
+    <header id="header" class="clear">
+      <div id="hgroup">
+        <h1><a href="#">10000 Coders</a></h1>
+        <h2>Be Free to Learn</h2>
+      </div>
+      <nav>
+        <ul id="demo">
+          <li><a href="./T86_10000coders.html">Home</a></li>
+          <li><a href="#">Curriculum</a></li>
+          <li><a href="#">Team</a></li>
+          <li><a href="#">Admission</a></li>
+          <li class="last"><a href="./user_details.html">User Details</a></li>
+        </ul>
+      </nav>
+    </header>
+  </div>
+  <div class="wrapper row2">
+    <div id="container" class="clear">
+      <section id="slider" class="clear">
+
+        <figure><img src="./images/murali sir.jpg" alt="" id="myBanner">
+          <figcaption>
+            <h2>Murali Sir mentor</h2>
+            <p>Murali Sir has 11 years experience on webdevelopment and 6 years experience on mentor. Murali sir is also
+              a Manager in Product Based Company. </p>
+            <footer class="more"><a href="#">Read More &raquo;</a></footer>
+          </figcaption>
+        </figure>
+      </section>
       <!-- <div id="homepage">
       <section id="services" class="clear">
         <article class="one_third">
@@ -100,7 +103,7 @@
       </section>
     </div> -->
 
-    <!-- <table border="1" style="width:100%">
+      <!-- <table border="1" style="width:100%">
         <thead>
             <tr>
                 <th>fname</th>
@@ -119,65 +122,75 @@
         </tbody>
     </table> -->
 
-    <div class="row">
+      <div class="row">
         <div class="column">
 
         </div>
         <div class="column">
-            <form onsubmit="getUserData(event)">
-                <div class="register">
-                    <label for="fullName" class="form-label">Full Name</label>
-                    <input type="text" class="form-control" id="fullName"><br><br>
-                </div>
-                <div class="register">
-                    <label for="email" class="form-label">Email Adress</label>
-                    <input type="email" class="form-control" id="email"><br><br>
-                </div>
-                <div class="register">
-                    <label for="userName" class="form-label">User Name</label>
-                    <input type="text" class="form-control" id="userName"><br><br>
-                </div>
-                <div class="register">
-                <label for="number">Number</label>
-                <input type="number" id="number"> <br><br>
-                </div>
-                <div class="register">
-                    <label for="password" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="password"><br><br>
-                </div><br>
+          <form onsubmit="getUserData(event)">
+            <div class="register">
+              <label for="fullName" class="form-label">Full Name</label>
+              <input type="text" class="form-control" id="fullName"><br><br>
+            </div>
+            <div class="register">
+              <label for="email" class="form-label">Email Adress</label>
+              <input type="email" class="form-control" id="email"><br><br>
+            </div>
+            <div class="register">
+              <label for="userName" class="form-label">User Name</label>
+              <input type="text" class="form-control" id="userName"><br><br>
+            </div>
+            <div class="register">
+              <label for="number">Number</label>
+              <input type="number" id="number"> <br><br>
+            </div>
+            <div class="register">
+              <label for="password" class="form-label">Password</label>
+              <input type="password" class="form-control" id="password"><br><br>
+            </div><br>
 
-                <!-- <div class="register">
+            <!-- <div class="register">
                     <label for="email" class="form-label">Email Adress</label>
                     <input type="email" class="form-control" id="email">
                 </div>  -->
-                <button class="btn btn-primary">Submit</button>
-            </form>
+            <button class="btn btn-primary">Submit</button>
+          </form>
 
         </div>
+      </div>
     </div>
   </div>
-</div>
-<div class="wrapper row3">
-  <footer id="footer" class="clear">
-    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
-    <p class="fl_right">Website by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">Hari Vardhan</a></p>
-  </footer>
-</div>
-<script src="./users.js"></script>
-<script>
+  <div class="wrapper row3">
+    <footer id="footer" class="clear">
+      <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
+      <p class="fl_right">Website by <a target="_blank" href="https://www.os-templates.com/"
+          title="Free Website Templates">Hari Vardhan</a></p>
+    </footer>
+  </div>
+  <script src="./users.js"></script>
+  <script>
+    var users=[]
     function getUserData(event) {
-            event.preventDefault()
-            var person = {
-                fullName: "",
-                userName: "",
-                email: ""
-            }
-            for (a in person) {
-                person[a] = document.getElementById(a).value
-            }
-            console.log(person)
-        }
-        document.querySelector("button").onclick = getUserData
-</script>
+      event.preventDefault()
+      var person = {
+        fullName: "",
+        userName: "",
+        email: "",
+        number: "",
+        password: ""
+      }
+      for (a in person) {
+        person[a] = document.getElementById(a).value
+      }
+      users.push(person)
+      clearForm()
+      display()
+      console.log(person)
+    }
+    document.querySelector("button").onclick = getUserData
+  </script>
+  <script src="./clear.js"></script>
+  <script src="./display.js"></script>
 </body>
+
 </html>
