--- a/Assignments/Assignment_Forms/T-87/register.html
+++ b/Assignments/Assignment_Forms/T-87/register.html
@@ -170,22 +170,30 @@
     </div>
     <script src="./users.js"></script>
     <script>
+      var users=[]
 
         function getUserData(event) {
             event.preventDefault()
             var person = {
                 fullName: "",
                 userName: "",
-                email: ""
+                email: "",
+                number:"",
+        password:""
             }
             for (a in person) {
                 person[a] = document.getElementById(a).value
             }
+            users.push(person)
+            clearForm()
+            display()
             console.log(person)
         }
         document.querySelector("button").onclick = getUserData
 
     </script>
+    <script src="./display.js"></script>
+    <script src="./clear.js"></script>
 </body>
 
 </html>
