--- a/Assignments/Assignment_Forms/T-84/registers.html
+++ b/Assignments/Assignment_Forms/T-84/registers.html
@@ -137,8 +137,8 @@
                             <input type="text" class="form-control" id="userName"><br><br>
                         </div>
                         <div class="register">
-                        <label for="number">Number</label>
-                        <input type="number" id="number"> <br><br>
+                        <label for="number" class="form-label">Number</label>
+                        <input type="number" class="form-control" id="number"> <br><br>
                         </div>
                         <div class="register">
                             <label for="password" class="form-label">Password</label>
@@ -164,21 +164,30 @@
         </footer>
     </div>
     <script>
+      var users=[]
 
 function getUserData(event) {
             event.preventDefault()
             var person = {
                 fullName: "",
                 userName: "",
-                email: ""
+                email: "",
+                number:"",
+                password:""
             }
             for (a in person) {
                 person[a] = document.getElementById(a).value
             }
+            users.push(person)
             console.log(person)
+            clearForm()
+            display()
+            
         }
         document.querySelector("button").onclick = getUserData
     </script>
+    <script src="./clear.js"></script>
+    <script src="./display.js"></script>
 </body>
 
 </html>
