--- a/Assignments/Assignment Dynamic Templates/Dynamic Basic 83/index.html
+++ b/Assignments/Assignment Dynamic Templates/Dynamic Basic 83/index.html
@@ -8,25 +8,30 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <div class="wrapper row1">
-        <header id="home">
-            <div id="title"></div>
-            <form action="#"></form>
-            <nav id="nav"></nav>
-        </header>
-    </div>   
-    <div class="wrapper row2">
-        <div class="container">
-            <section class="section1"></section>
-            <div class="homepage">
-                <section class="section2" id="cast"></section>
-                <section class="section3"></section>
+    <div class="rows">
+        <div class="wrapper row1">
+            <header id="home">
+                <div id="title"></div>
+                <form action="#"></form>
+                <nav id="nav"></nav>
+            </header>
+        </div>   
+    
+        <div class="wrapper row2">
+            <div class="container">
+                <section class="section1"></section>
+                <div class="homepage">
+                    <section class="section2" id="cast"></section>
+                    <section class="section3"></section>
+                </div>
             </div>
         </div>
+        
+        <div class="wrapper row3">
+            <footer id="footer" ></footer>
+        </div>
     </div>
-    <div class="wrapper row3">
-        <footer id="footer" ></footer>
-    </div>
+    <script src="./scripts/headerFooter.js"></script>
     <script src="./scripts/index.js"></script>
  </body>
 </html>
