--- a/Assignments/Assignment Dynamic Templates/Dynamic Basic 84/index.html
+++ b/Assignments/Assignment Dynamic Templates/Dynamic Basic 84/index.html
@@ -29,6 +29,7 @@
       <footer id="footer"></footer>
     </div>
 
-    <script src="./script.js"></script>
+    <script src="./scripts/index.js"></script>
+    <script src="./scripts/headerFooter.js"></script>
   </body>
 </html>
