--- a/Assignments/Assignment Dynamic Templates/Dynamic Basic 85/index.html
+++ b/Assignments/Assignment Dynamic Templates/Dynamic Basic 85/index.html
@@ -26,7 +26,8 @@
     <div class="wrapper row3">
         <footer id="footer"></footer>
     </div>
-    <script src="./script.js"></script>
+    <script src="./scripts/headerFooter.js"></script>
+    <script src="./scripts/index.js"></script>
 </body>
 
 </html>
