--- a/Assignments/Assignment Dynamic Templates/Dynamic Basic 86/index.html
+++ b/Assignments/Assignment Dynamic Templates/Dynamic Basic 86/index.html
@@ -29,6 +29,7 @@
     <div class="wrapper row3">
         <footer id="footer"></footer>
     </div>
-    <script src="./index.js"></script>
+    <script src="./scripts/headerFooter.js"></script>
+    <script src="./scripts/index.js"></script>
     </body>
 </html>
