--- a/Assignments/Assignment Dynamic Templates/Dynamic Basic 87/index.html
+++ b/Assignments/Assignment Dynamic Templates/Dynamic Basic 87/index.html
@@ -47,7 +47,8 @@
     <div class="wrapper row3">
         <footer id="footer"></footer>
     </div>
-    <script src="./index.js"></script>
+    <script src="./scripts/headerFooter.js"></script>
+    <script src="./scripts/index.js"></script>
 </body>
 
 </html>
