--- a/Assignments/Assignment Dynamic Templates/Dynamic Basic 88/index.html
+++ b/Assignments/Assignment Dynamic Templates/Dynamic Basic 88/index.html
@@ -31,6 +31,7 @@
         <footer id="footer"></footer>
     </div>
 
-    <script src="./index.js"></script>
+    <script src="./scripts/headerFooter.js"></script>
+    <script src="./scripts/index.js"></script>
 </body>
 </html>
