--- a/Javascript/JS6 Validations/index.html
+++ b/Javascript/JS6 Validations/index.html
@@ -1,82 +1,54 @@
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <script src="script.js"></script>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <form>
-            <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label"
-                >First Name</label
-              >
-              <input
-                type="email"
-                class="form-control"
-                id="fname"
-                onkeyup="validate()"
-              />
-            </div>
-            <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label"
-                >Last Name</label
-              >
-              <input
-                type="email"
-                class="form-control"
-                id="lname"
-                onkeyup="validate()"
-              />
-            </div>
 
-            <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label"
-                >Email address</label
-              >
-              <input
-                type="email"
-                class="form-control"
-                id="email"
-                onkeyup="validate()"
-              />
-            </div>
+<head>
+  <meta charset="UTF-8" />
+  <script src="script.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+</head>
 
-            <button
-              type="button"
-              class="btn btn-primary"
-              onclick="createPerson()"
-              disabled
-            >
-              Submit
-            </button>
-          </form>
-        </div>
-        <div class="col">
-          <table class="table">
-            <thead>
-              <tr>
-                <th>#</th>
-                <th>First</th>
-                <th>Last</th>
-                <th>Email</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-          </table>
-        </div>
+<body>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <form>
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">First Name</label>
+            <input type="email" class="form-control" id="fname" onkeyup="validate()" />
+          </div>
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Last Name</label>
+            <input type="email" class="form-control" id="lname" onkeyup="validate()" />
+          </div>
+
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="email" onkeyup="validate()" />
+          </div>
+
+          <button type="button" class="btn btn-primary" onclick="createPerson()" disabled>
+            Submit
+          </button>
+        </form>
+      </div>
+      <div class="col">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>First</th>
+              <th>Last</th>
+              <th>Email</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
       </div>
     </div>
-    <script src="create.js"></script>
-    <script src="display.js"></script>
-    <script src="clear.js"></script>
-    <script src="validate.js"></script>
-  </body>
+  </div>
+  <script src="create.js"></script>
+  <script src="display.js"></script>
+  <script src="clear.js"></script>
+  <script src="validate.js"></script>
+</body>
+
 </html>
