completed all the validation forms

--- a/Assignments/Validation_Templates/T-84/T84_movie_poster.html
+++ b/Assignments/Validation_Templates/T-84/T84_movie_poster.html
@@ -65,33 +65,33 @@
       <section id="latest" class="last clear">
         <article class="one_quarter">
           <figure class="myImage">
-            <img src="images/images 6.jpg" width="215" height="315" alt=""> -->
-             <figcaption>Master</figcaption> -->
-            <figcaption>ACHARYA</figcaption>
+            <img src="images/images 6.jpg" width="215" height="315" alt=""> 
+             <figcaption>Master</figcaption> 
+            <!-- <figcaption>ACHARYA</figcaption> -->
 
           </figure>
         </article>
         <article class="one_quarter">
           <figure class="myImage">
-            <img src="images/images8.jpg" width="215" height="315" alt=""> -->
-            <figcaption>Oxygen</figcaption> -->
-            <figcaption>PUSHPA</figcaption>
+            <img src="images/images8.jpg" width="215" height="315" alt=""> 
+            <figcaption>Oxygen</figcaption> 
+            <!-- <figcaption>PUSHPA</figcaption> -->
 
           </figure>
         </article>
         <article class="one_quarter">
           <figure class="myImage">
-            <img src="images/Bhai.jpg" width="215" height="315" alt=""> -->
-            <figcaption>My Story</figcaption> -->
-            <figcaption>BACHELOR</figcaption>
+            <img src="images/Bhai.jpg" width="215" height="315" alt=""> 
+            <figcaption>My Story</figcaption> 
+            <!-- <figcaption>BACHELOR</figcaption> -->
 
           </figure>
         </article>
         <article class="one_quarter lastbox">
           <figure class="myImage">
-            <img src="images/images9.jpg" width="215" height="315" alt=""> -->
-             <figcaption>Love Story</figcaption> -->
-            <figcaption>RANGASTALAM</figcaption>
+            <img src="images/images9.jpg" width="215" height="315" alt=""> 
+             <figcaption>Love Story</figcaption> 
+            <!-- <figcaption>RANGASTALAM</figcaption> -->
 
           </figure>
         </article>
