--- a/Assignments/Validation_Templates/T-86/user_details.html
+++ b/Assignments/Validation_Templates/T-86/user_details.html
@@ -17,7 +17,7 @@
         <li><a href="./T86_10000coders.html">Home</a></li>
         <li><a href="#">Curriculum</a></li>
         <li><a href="#">Team</a></li>
-        <li><a href="#">Admission</a></li>
+        <li><a href="./register.html">Register</a></li>
         <li class="last"><a href="./user_details.html">User Details</a></li> 
       </ul>
     </nav>
