--- a/Assignments/Validation_Templates/T-85/registers.html
+++ b/Assignments/Validation_Templates/T-85/registers.html
@@ -5,6 +5,8 @@
   <title>Basic 85</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="./tour_template_style.css" type="text/css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 </head>
 
 <body>
@@ -25,133 +27,40 @@
       </nav>
     </header>
   </div>
-  <div class="wrapper row2">
-    <div id="container" class="clear">
-      <!-- <section id="shout">
+  <div class="container">
+    <div class="row">
+      <div class="col" style="padding:20px;">
+        <form>
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">First Name</label>
+            <input type="text" class="form-control" id="fname" onkeyup="validate()" />
+          </div>
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Last Name</label>
+            <input type="text" class="form-control" id="lname" onkeyup="validate()" />
+          </div>
 
-      <p>Home to some of the surreal hill stations, India is a travel destination you have to visit. Adorned with tranquil ambience, verdant greenery, sprawling desert, beautiful valleys, and dreamy lakes, the hill stations in India make for the best holiday destinations. Undoubtedly, your hill station trip in India will be an experience that shall remain etched in your mind for the rest of your life. </p>
-    </section>
-    <div id="homepage">
-      <section id="latest">
-        <article>
-          <figure>
-            <ul id="demo">
-              <li class="one_quarter"><img src="images/taj.jpg" width="215" height="150" alt=""></li>
-              <li class="one_quarter"><img src="images/kerala.jpg" width="215" height="150" alt=""></li>
-              <li class="one_quarter"><img src="images/goa.jpg" width="215" height="150" alt=""></li>
-              <li class="one_quarter lastbox"><img src="images/manali.jpg" width="215" height="150" alt=""></li>
-            </ul>
-            <figcaption><a href="#">View All Our Recent Places &raquo;</a></figcaption>
-          </figure>
-        </article>
-      </section>
-      <section id="services" class="last clear">
-        <article class="one_quarter">
-          <figure><img src="images/charan.jpg" width="32" height="32" alt=""></figure>
-          <strong>Ram Charan</strong>
-          <p>I am Travelled Goa. Provided the best accomodation, food and best hotels. I hope, i travel many places in this Company. </p>
-          <p class="more"><a href="#">Read More &raquo;</a></p>
-        </article>
-        <article class="one_quarter">
-          <figure><img src="images/pk.jpg" width="32" height="32" alt=""></figure>
-          <strong>Pawan Kalyan</strong>
-          <p>I travelled Kerala . Best Place to enjoy Nature. Best Travellers company. provided Best food, hotels ,accomodation and good time management.</p>
-          <p class="more"><a href="#">Read More &raquo;</a></p>
-        </article>
-        <article class="one_quarter">
-          <figure><img src="images/kajal.jpg" width="32" height="32" alt=""></figure>
-          <strong>Kajal Agarwal</strong>
-          <p>I travelled Taj Mahal. Best place. Best Travellers company. provided Best food, hotels ,accomodation and good time management.</p>
-          <p class="more"><a href="#">Read More &raquo;</a></p>
-        </article>
-        <article class="one_quarter lastbox">
-          <figure><img src="images/vdk.jpg" width="32" height="32" alt=""></figure>
-          <strong>Vijay Devarakonda</strong>
-          <p>I Love travelling. Im almost travelled all places in India. I enjoyed a lot in this trip.</p>
-          <p class="more"><a href="#">Read More &raquo;</a></p>
-        </article>
-        <div class="spacer"></div>
-        <article class="one_quarter">
-          <figure><img src="images/mohan.jpg" width="32" height="32" alt=""></figure>
-          <strong>Mohan Babu</strong>
-          <p>Great travellers. all employers are worked well. Treat us like their bosses. No Worries Mast Enjoyment.</p>
-          <p class="more"><a href="#">Read More &raquo;</a></p>
-        </article>
-        <article class="one_quarter">
-          <figure><img src="images/ntr.jpg" width="32" height="32" alt=""></figure>
-          <strong>NTR</strong>
-          <p>I Love Travelling. Best place. Best Travellers company. provided Best food, hotels ,accomodation and good time management.</p>
-          <p class="more"><a href="#">Read More &raquo;</a></p>
-        </article>
-        <article class="one_quarter">
-          <figure><img src="images/Ram.jpg" width="32" height="32" alt=""></figure>
-          <strong>Ram Pothineni</strong>
-          <p>Enjoyed a lot in this trip. Best travellers. I always prefers Tour My India.</p>
-          <p class="more"><a href="#">Read More &raquo;</a></p>
-        </article>
-        <article class="one_quarter lastbox">
-          <figure><img src="images/mahesh.jpg" width="32" height="32" alt=""></figure>
-          <strong>Mahesh Babu</strong>
-          <p>I travelled Kerala . Best Place to enjoy Nature. Best Travellers company. provided Best food, hotels ,accomodation and good time management.</p>
-          <p class="more"><a href="#">Read More &raquo;</a></p>
-        </article>
-      </section>
-    </div> -->
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="email" onkeyup="validate()" />
+          </div>
 
-      <!-- <table border="1" style="width:100%">
-
-      <thead>
-          <tr>
-              <th>fname</th>
-              <th>lname</th>
-              <th>tel</th>
-              <th>Address</th>
-              <th>City</th>
-              <th>State</th>
-              <th>zip</th>
-
-          </tr>
-      </thead>
-      <tbody>
-
-
-      </tbody>
-  </table> -->
-      <div class="row">
-        <div class="column">
-
-        </div>
-        <div class="column">
-          <form onsubmit="getUserData(event)">
-            <div class="register">
-              <label for="fullName" class="form-label">Full Name</label>
-              <input type="text" class="form-control" id="fullName"><br><br>
-            </div>
-            <div class="register">
-              <label for="email" class="form-label">Email Adress</label>
-              <input type="email" class="form-control" id="email"><br><br>
-            </div>
-            <div class="register">
-              <label for="userName" class="form-label">User Name</label>
-              <input type="text" class="form-control" id="userName"><br><br>
-            </div>
-            <div class="register">
-              <label for="number">Number</label>
-              <input type="number" id="number"> <br><br>
-            </div>
-            <div class="register">
-              <label for="password" class="form-label">Password</label>
-              <input type="password" class="form-control" id="password"><br><br>
-            </div><br>
-
-            <!-- <div class="register">
-                <label for="email" class="form-label">Email Adress</label>
-                <input type="email" class="form-control" id="email">
-            </div>  -->
-            <button class="btn btn-primary">Submit</button>
-          </form>
-
-        </div>
+          <button type="button" class="btn btn-primary" onclick="createPerson()" disabled>
+            Submit
+          </button><br><br><br><br><br><br><br>
+        </form>
+      </div>
+      <div class="col" style="padding:20px;">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>First</th>
+              <th>Last</th>
+              <th>Email</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
       </div>
     </div>
   </div>
@@ -162,31 +71,10 @@
           title="Free Website Templates"> Hari Vardhan</a></p>
     </footer>
   </div>
-  <script>
-    var users = []
-    function getUserData(event) {
-      event.preventDefault()
-      var person = {
-        fullName: "",
-        userName: "",
-        email: "",
-        number: "",
-        password: ""
-      }
-      for (a in person) {
-        person[a] = document.getElementById(a).value
-      }
-      users.push(person)
-      display()
-      clearForm()
-      console.log(person)
-    }
-    document.querySelector("button").onclick = getUserData
-
-
-  </script>
-  <script src="./clear.js"></script>
-  <script src="./display_array.js"></script>
+  <script src="create.js"></script>
+  <script src="display.js"></script>
+  <script src="clear.js"></script>
+  <script src="validate.js"></script>
 
 </body>
 
