--- a/Assignments/Validation_Templates/T-86/register.html
+++ b/Assignments/Validation_Templates/T-86/register.html
@@ -5,6 +5,8 @@
   <title>10000 coders</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="10000coders_style.css" type="text/css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 </head>
 
 <body>
@@ -19,7 +21,7 @@
           <li><a href="./T86_10000coders.html">Home</a></li>
           <li><a href="#">Curriculum</a></li>
           <li><a href="#">Team</a></li>
-          <li><a href="#">Admission</a></li>
+          <li><a href="#">Register</a></li>
           <li class="last"><a href="./user_details.html">User Details</a></li>
         </ul>
       </nav>
@@ -38,124 +40,41 @@
           </figcaption>
         </figure>
       </section>
-      <!-- <div id="homepage">
-      <section id="services" class="clear">
-        <article class="one_third">
-          <h2>HTML</h2>
-          <img src="./images/html.png" alt="">
-          <p>The HyperText Markup Language, or HTML is the standard markup language for documents designed to be displayed in a web browser. </p>
-          <footer class="more"><a href="#">Read More &raquo;</a></footer>
-        </article>
-        <article class="one_third">
-          <h2>CSS</h2>
-          <img src="./images/css.png" alt="">
-          <p>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language such as HTML</p>
-          <footer class="more"><a href="#">Read More &raquo;</a></footer>
-        </article>
-        <article class="one_third lastbox">
-          <h2>Java Script</h2>
-          <img src="./images/js.png" alt="">
-          <p>JavaScript often abbreviated as JS, is a programming language that conforms to the ECMAScript specification.</p>
-          <footer class="more"><a href="#">Read More &raquo;</a></footer>
-        </article>
-      </section>
-      <section id="latest" class="last clear">
-        <article class="one_quarter">
-          <figure class="myImage">
-            <img src="./images/react.png" width="215" height="100" alt=""> 
-            <figcaption>
-              <h2>React JS</h2>
-              <p>React (also known as React.js or ReactJS) is a free and open-source front-end JavaScript library for building user interfaces or UI components.</p>
-              <footer class="more"><a href="#">Read More &raquo;</a></footer>
-            </figcaption>
-          </figure>
-        </article>
-        <article class="one_quarter">
-          <figure class="myImage">
-            <img src="./images/mongo.png" width="215" height="100" alt=""> 
-            <figcaption>
-              <h2>Mongo DB</h2>
-              <p>MongoDB is a source-available cross-platform document-oriented database program. Classified as a NoSQL database program, MongoDB uses JSON-like documents with optional schemas. </p>
-              <footer class="more"><a href="#">Read More &raquo;</a></footer>
-            </figcaption>
-          </figure>
-        </article>
-        <article class="one_quarter">
-          <figure class="myImage">
-            <img src="./images/node.png" width="215" height="100" alt=""> 
-            <figcaption>
-              <h2>Node js</h2>
-              <p>Node.js is an open-source, cross-platform, back-end JavaScript runtime environment that runs on the V8 engine and executes JavaScript code outside a web browser. </p>
-              <footer class="more"><a href="#">Read More &raquo;</a></footer>
-            </figcaption>
-          </figure>
-        </article>
-        <article class="one_quarter lastbox">
-          <figure class="myImage">
-            <img src="./images/bootstrap.jpg" width="215" height="100" alt=""> 
-            <figcaption>
-              <h2>Bootstrap</h2>
-              <p>Bootstrap is a free and open-source CSS framework directed at responsive, mobile-first front-end web development.</p>
-              <footer class="more"><a href="#">Read More &raquo;</a></footer>
-            </figcaption>
-          </figure>
-        </article>
-      </section>
-    </div> -->
-
-      <!-- <table border="1" style="width:100%">
-        <thead>
-            <tr>
-                <th>fname</th>
-                <th>lname</th>
-                <th>tel</th>
-                <th>Address</th>
-                <th>City</th>
-                <th>State</th>
-                <th>zip</th>
-
-            </tr>
-        </thead>
-        <tbody>
-
-
-        </tbody>
-    </table> -->
-
+    </div>
+    <div class="container">
       <div class="row">
-        <div class="column">
-
-        </div>
-        <div class="column">
-          <form onsubmit="getUserData(event)">
-            <div class="register">
-              <label for="fullName" class="form-label">Full Name</label>
-              <input type="text" class="form-control" id="fullName"><br><br>
+        <div class="col" style="padding:20px;">
+          <form>
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label">First Name</label>
+              <input type="text" class="form-control" id="fname" onkeyup="validate()" />
             </div>
-            <div class="register">
-              <label for="email" class="form-label">Email Adress</label>
-              <input type="email" class="form-control" id="email"><br><br>
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label">Last Name</label>
+              <input type="text" class="form-control" id="lname" onkeyup="validate()" />
             </div>
-            <div class="register">
-              <label for="userName" class="form-label">User Name</label>
-              <input type="text" class="form-control" id="userName"><br><br>
+  
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label">Email address</label>
+              <input type="email" class="form-control" id="email" onkeyup="validate()" />
             </div>
-            <div class="register">
-              <label for="number">Number</label>
-              <input type="number" id="number"> <br><br>
-            </div>
-            <div class="register">
-              <label for="password" class="form-label">Password</label>
-              <input type="password" class="form-control" id="password"><br><br>
-            </div><br>
-
-            <!-- <div class="register">
-                    <label for="email" class="form-label">Email Adress</label>
-                    <input type="email" class="form-control" id="email">
-                </div>  -->
-            <button class="btn btn-primary">Submit</button>
+  
+            <button type="button" class="btn btn-primary" onclick="createPerson()" disabled>
+              Submit
+            </button><br><br><br><br><br><br><br>
           </form>
-
+        </div>
+        <div class="col" style="padding:20px;">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>First</th>
+                <th>Last</th>
+                <th>Email</th>
+              </tr>
+            </thead>
+            <tbody></tbody>
+          </table>
         </div>
       </div>
     </div>
@@ -167,30 +86,10 @@
           title="Free Website Templates">Hari Vardhan</a></p>
     </footer>
   </div>
-  <script src="./users.js"></script>
-  <script>
-    var users=[]
-    function getUserData(event) {
-      event.preventDefault()
-      var person = {
-        fullName: "",
-        userName: "",
-        email: "",
-        number: "",
-        password: ""
-      }
-      for (a in person) {
-        person[a] = document.getElementById(a).value
-      }
-      users.push(person)
-      clearForm()
-      display()
-      console.log(person)
-    }
-    document.querySelector("button").onclick = getUserData
-  </script>
-  <script src="./clear.js"></script>
-  <script src="./display.js"></script>
+  <script src="create.js"></script>
+  <script src="display.js"></script>
+  <script src="clear.js"></script>
+  <script src="validate.js"></script>
 </body>
 
 </html>
