--- a/Assignments/Validation_Templates/T-87/register.html
+++ b/Assignments/Validation_Templates/T-87/register.html
@@ -5,10 +5,13 @@
     <title>Template5</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="flipcart_style.css" type="text/css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+
 </head>
 
 <body>
-    <div class="wrapper row1">
+    <div class="wrapper row1" style="background-color:rgb(243,243,114);">
         <header id="header" class="clear">
             <div id="hgroup">
                 <h1><a href="#">FlipCart</a></h1>
@@ -27,173 +30,55 @@
     </div>
     <div class="wrapper row2">
         <div id="container" class="clear">
-            <!-- <div id="homepage">
-      <section id="latest" class="clear">
-        <article class="one_quarter">
-          <figure class="myImage">
-             <img src="images/mobile.jpg" width="215" height="315" alt=""> 
-            <figcaption>Electronics</figcaption>
-          </figure>
-        </article>
-        <article class="one_quarter">
-          <figure class="myImage">
-             <img src="images/grocery.jpg" width="215" height="315" alt=""> 
-            <figcaption>Grocery</figcaption>
-          </figure>
-        </article>
-        <article class="one_quarter">
-          <figure class="myImage">
-            <img src="images/home.jpg" width="215" height="315" alt=""> 
-            <figcaption>Home</figcaption>
-          </figure>
-        </article>
-        <article class="one_quarter lastbox">
-          <figure class="myImage">
-             <img src="images/travel.jpg" width="215" height="315" alt=""> 
-            <figcaption>Travel</figcaption>
-          </figure>
-        </article>
-      </section>
-      <section id="shout">
-        <p>Spot & Steal Deals for a Limited Time Period. Get Contactless & Save Delivery. Buy Now! 20%-80% off on all products. Get Contactless & Save Delivery. Huge Collection Available.</p>
-      </section>
-    </div>
-    <div id="content">
-      <section id="services" class="last clear">
-        <ul>
-          <li>
-            <article class="clear">
-              <figure><img src="images/iphones.jpg" alt="">
-                <figcaption>
-                  <h2>IPhones</h2>
-                  <p>iPhone 6. iPhone SE (1st generation) Sierra blue, silver, gold and graphite.<a href="https://www.os-templates.com/" title="Free Website Templates">Ios link</a> 15.4 cm (6.1-inch) Super Retina XDR display with ProMotion technology, HDR and True Tone 1<a href="https://www.os-templates.com/template-terms">iphone</a>.</p>
-                  <footer class="more"><a href="#">Read More &raquo;</a></footer>
-                </figcaption>
-              </figure>
-            </article>
-          </li>
-          <li class="last">
-            <article class="clear">
-              <figure><img src="images/shoes.jpg" alt="">
-                <figcaption>
-                  <h2>Shoes</h2>
-                  <p>There are many brands that offer lightweight shoes, like Reebok shoes, Adidas shoes and many more, like the Fila Colourblocked Drebo, for instance.<a href="https://www.os-templates.com/"> Shoes</a>.</p>
-                  <footer class="more"><a href="#">Read More &raquo;</a></footer>
-                </figcaption>
-              </figure>
-            </article>
-          </li>
-        </ul>
-      </section>
-    </div>
-    <aside id="right_column">
-      <h2 class="title">Categories</h2>
-      <nav>
-        <ul>
-          <li><a href="#">Gaming</a></li>
-          <li><a href="#">Health Care</a></li>
-          <li><a href="#">Toys</a></li>
-          <li><a href="#">Power Banks</a></li>
-          <li><a href="#">Fashion</a></li>
-          <li><a href="#">Headsets</a></li>
-          <li><a href="#">Tools & Utility</a></li>
-          <li><a href="#">Lightining</a></li>
-          <li><a href="#">Air Conditioners</a></li>
-          <li class="last"><a href="#">Buying Guide</a></li>
-        </ul>
-      </nav>
-    </aside> -->
-            <!-- 
-      <table border="1" style="width:100%">
-        <thead>
-          <tr>
-            <th>fname</th>
-            <th>lname</th>
-            <th>tel</th>
-            <th>Address</th>
-            <th>City</th>
-            <th>State</th>
-            <th>zip</th>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <form>
+                            <div class="mb-3">
+                                <label for="exampleInputEmail1" class="form-label">First Name</label>
+                                <input type="text" class="form-control" id="fname" onkeyup="validate()" />
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleInputEmail1" class="form-label">Last Name</label>
+                                <input type="text" class="form-control" id="lname" onkeyup="validate()" />
+                            </div>
 
-          </tr>
-        </thead>
-        <tbody>
+                            <div class="mb-3">
+                                <label for="exampleInputEmail1" class="form-label">Email address</label>
+                                <input type="email" class="form-control" id="email" onkeyup="validate()" />
+                            </div>
 
-
-        </tbody>
-      </table> -->
-
-            <div class="row">
-                <div class="column">
-
-                </div>
-                <div class="column">
-                    <form onsubmit="getUserData(event)">
-                        <div class="register">
-                            <label for="fullName" class="form-label">Full Name</label>
-                            <input type="text" class="form-control" id="fullName"><br><br>
-                        </div>
-                        <div class="register">
-                            <label for="email" class="form-label">Email Adress</label>
-                            <input type="email" class="form-control" id="email"><br><br>
-                        </div>
-                        <div class="register">
-                            <label for="userName" class="form-label">User Name</label>
-                            <input type="text" class="form-control" id="userName"><br><br>
-                        </div>
-                        <div class="register">
-                            <label for="number">Number</label>
-                            <input type="number" id="number"> <br><br>
-                        </div>
-                        <div class="register">
-                            <label for="password" class="form-label">Password</label>
-                            <input type="password" class="form-control" id="password"><br><br>
-                        </div><br>
-
-                        <!-- <div class="register">
-                    <label for="email" class="form-label">Email Adress</label>
-                    <input type="email" class="form-control" id="email">
-                </div>  -->
-                        <button class="btn btn-primary">Submit</button>
-                    </form>
-
+                            <button type="button" class="btn btn-primary" onclick="createPerson()" disabled>
+                                Submit
+                            </button>
+                        </form>
+                    </div>
+                    <div class="col">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>First</th>
+                                    <th>Last</th>
+                                    <th>Email</th>
+                                </tr>
+                            </thead>
+                            <tbody></tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="wrapper row3">
-        <footer id="footer" class="clear">
-            <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">FlipCart</a></p>
-            <p class="fl_right">Developed By<a target="_blank" href="https://www.os-templates.com/"
-                    title="Free Website Templates"> Hari Vardhan</a></p>
-        </footer>
-    </div>
-    <script src="./users.js"></script>
-    <script>
-      var users=[]
-
-        function getUserData(event) {
-            event.preventDefault()
-            var person = {
-                fullName: "",
-                userName: "",
-                email: "",
-                number:"",
-        password:""
-            }
-            for (a in person) {
-                person[a] = document.getElementById(a).value
-            }
-            users.push(person)
-            clearForm()
-            display()
-            console.log(person)
-        }
-        document.querySelector("button").onclick = getUserData
-
-    </script>
-    <script src="./display.js"></script>
-    <script src="./clear.js"></script>
+        <div class="wrapper row3">
+            <footer id="footer" class="clear">
+                <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">FlipCart</a></p>
+                <p class="fl_right">Developed By<a target="_blank" href="https://www.os-templates.com/"
+                        title="Free Website Templates"> Hari Vardhan</a></p>
+            </footer>
+        </div>
+        <script src="create.js"></script>
+        <script src="display.js"></script>
+        <script src="clear.js"></script>
+        <script src="validate.js"></script>
 </body>
 
 </html>
