Done on Working with Forms

--- a/Working again on templates/basic-83/index.html
+++ b/Working again on templates/basic-83/index.html
@@ -10,8 +10,7 @@
 <div class="wrapper row1">
   <header id="header" class="clear">
     <div id="hgroup">
-      <h1><a href="#">Basic 83</a></h1>
-      <h2>Free HTML5 Website Template</h2>
+      
     </div>
     <form action="#" method="post">
       <fieldset>
@@ -22,11 +21,7 @@
     </form>
     <nav>
       <ul>
-        <li><a href="#">Text Link</a></li>
-        <li><a href="#">Text Link</a></li>
-        <li><a href="#">Text Link</a></li>
-        <li><a href="#">Text Link</a></li>
-        <li class="last"><a href="#">Text Link</a></li>
+        
       </ul>
     </nav>
   </header>
@@ -95,5 +90,6 @@
     <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
   </footer>
 </div>
+<script src ="scripts/index1.js"></script>
 </body>
 </html>
